Container/Kubernetes/k3s-soniiit/UptimeKuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma
  namespace: uptimekuma
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptimekuma.home.soniiit.net`)
      kind: Rule
      services:
        - name: my-uptime-kuma
          port: 3001
  tls:
    secretName: home-soniiit-net-selfsigned-tls
